--- a/banka-frontend/package.json
+++ b/banka-frontend/package.json
@@ -11,6 +11,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "jspdf": "^2.5.0",
+    "jspdf-autotable": "^3.5.23",
     "material-table": "^1.69.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
