--- a/Banka/src/main/resources/application.properties
+++ b/Banka/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
 
-mt102.pathToFile =C:\\Users\\vladi\\Desktop\\SEMESTAR 5\\Poslovna\\Banka\\src\\main\\resources\\mt102.txt
 
+#apsolutne putanje za .txt. Promeniti shodno ra?unaru.
+mt102.pathToFile =C:\\Users\\vladi\\Desktop\\SEMESTAR 5\\Poslovna\\Banka\\src\\main\\resources\\mt102.txt
 mt103.pathToFile C:\\Users\\vladi\\Desktop\\SEMESTAR 5\\Poslovna\\Banka\\src\\main\\resources\\mt103.txt
